prodMetadata/src/objects/IAVAEvent__c.object
<CustomObject>
    <fields>
        <fullName>Any_follow_up_required_by_staff__c</fullName>
        <label>Any follow up required by staff?</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Associated_Cost__c</fullName>
        <description>Cost associated with attending the event</description>
        <inlineHelpText>Cost associated with attending the event</inlineHelpText>
        <label>Associated Cost</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Average_Event_Rating__c</fullName>
        <description>Average Event Rating</description>
        <inlineHelpText>Average Event Rating</inlineHelpText>
        <label>Average Event Rating</label>
        <precision>2</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Blog_Post_Link__c</fullName>
        <inlineHelpText>Link to blog post</inlineHelpText>
        <label>Blog Post Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Brief_Description__c</fullName>
        <label>Brief Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Chatter_Group_Mirror_Group_Id__c</fullName>
        <formula>Chatter_Group_Mirror__r.Group_ID__c</formula>
        <label>Chatter Group Mirror Group Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Chatter_Group_Mirror__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Chatter Group Mirror record for the group used to communicate with event attendees</description>
        <inlineHelpText>The Chatter Group Mirror record for the group used to communicate with event attendees (gets automatically populated on save).</inlineHelpText>
        <label>Chatter Group Mirror (auto populated)</label>
        <referenceTo>Chatter_Group_Mirror__c</referenceTo>
        <relationshipLabel>Related Events</relationshipLabel>
        <relationshipName>Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Collect_Guest_Email__c</fullName>
        <description>If selected, guest Email will be collected at time of request.</description>
        <inlineHelpText>If selected, guest Email will be collected at time of request.</inlineHelpText>
        <label>Collect Guest Email</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Optional</fullName>
                </value>
                <value>
                    <fullName>Required</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Collect_Guest_Name__c</fullName>
        <description>If selected, Guest First and Last Name will be collected at time of request.</description>
        <inlineHelpText>If selected, Guest First and Last Name will be collected at time of request.</inlineHelpText>
        <label>Collect Guest Name</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Optional</fullName>
                </value>
                <value>
                    <fullName>Required</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Collect_Guest_Phone__c</fullName>
        <description>If selected, guest Mobile Phone will be collected at time of request.</description>
        <inlineHelpText>If selected, guest Mobile Phone will be collected at time of request.</inlineHelpText>
        <label>Collect Guest Phone (mobile)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Optional</fullName>
                </value>
                <value>
                    <fullName>Required</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cost_Description__c</fullName>
        <label>Cost Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Creator_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is the contact who has submitted the event via an external tool, or to be used to populate the contact of the local host whether or not they are in COV</description>
        <label>Host</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Events</relationshipLabel>
        <relationshipName>Events_Hosted</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_Accepted_Host_TOS__c</fullName>
        <description>Date/Time when event creator accepted IAVA Leader Code of Conduct</description>
        <inlineHelpText>Date/Time when event creator accepted IAVA Leader Code of Conduct</inlineHelpText>
        <label>Date Accepted Host TOS</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Did_any_problems_arise__c</fullName>
        <label>Did any problems arise?</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Do_not_show_in_public_event_marker_feed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, this event will not show up on the map of event markers</description>
        <inlineHelpText>If checked, this event will not show up on the map of event markers</inlineHelpText>
        <label>Do not show in public event marker feed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dont_create_Chatter_Group__c</fullName>
        <defaultValue>true</defaultValue>
        <description>If checked (default) do not automatically create a chatter group for event communication.</description>
        <inlineHelpText>If checked (default) do not automatically create a chatter group for event communication.</inlineHelpText>
        <label>Don&apos;t create Chatter Group</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email_Text__c</fullName>
        <description>captures the text of the invite email</description>
        <inlineHelpText>enter the text of the invite email</inlineHelpText>
        <label>Email Text</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>End_Time__c</fullName>
        <inlineHelpText>Format: 9:30 PM (use local time for the event)</inlineHelpText>
        <label>End Time (local)</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Date__c</fullName>
        <label>Event Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Event_Day_of_Month__c</fullName>
        <formula>DAY(Event_Date__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Event Day of Month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Event_Day_of_Week__c</fullName>
        <formula>MOD(Event_Date__c - DATE(1900,1,7),7) + 1</formula>
        <inlineHelpText>1 is Sunday, 2 is Monday, 3 is Tuesday, 4 is Wednesday, 5 is Thursday, 6 is Friday, 7 is Saturday</inlineHelpText>
        <label>Event Day of Week</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Event_Day_week__c</fullName>
        <formula>MOD(Event_Date__c - DATE(1900,1,7),7) + 1</formula>
        <label>Event Day - week</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Event_Month__c</fullName>
        <formula>MONTH(Event_Date__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Event Month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Event_Public_Details__c</fullName>
        <label>Event Public Details</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Event_Relative_URL__c</fullName>
        <description>Relative URL for main event page (used so code can pull from a single source and when URL algorithm changes, can just change it in this formula)</description>
        <formula>&apos;cov_event?id=&apos; + Id</formula>
        <inlineHelpText>Relative URL for main event page (used so code can pull from a single source and when URL algorithm changes, can just change it in this formula)</inlineHelpText>
        <label>Event Relative URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Link_Internal_Use_Only__c</fullName>
        <description>External RSVP link</description>
        <inlineHelpText>External RSVP link</inlineHelpText>
        <label>External Link (Internal Use Only)</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Facebook_Promotion_Language__c</fullName>
        <label>Facebook Promotion Language</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_Team_POC__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>field team member that is working with external member</inlineHelpText>
        <label>Field Team POC</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Events (Field Team POC)</relationshipLabel>
        <relationshipName>Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Follow_up_Email_Text__c</fullName>
        <description>captures the text of the follow up email</description>
        <inlineHelpText>enter the text of the follow up email</inlineHelpText>
        <label>Follow up Email Text</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Joinable_By__c</fullName>
        <label>Joinable By (not yet functional)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Everyone</fullName>
                </value>
                <value>
                    <fullName>Confirmed</fullName>
                </value>
                <value>
                    <fullName>Unconfirmed</fullName>
                </value>
                <value>
                    <fullName>Other Era</fullName>
                </value>
                <value>
                    <fullName>Family</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Latitude__c</fullName>
        <label>Latitude</label>
        <precision>18</precision>
        <scale>15</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Location_City__c</fullName>
        <label>Location City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_State__c</fullName>
        <label>Location State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_Street_Address__c</fullName>
        <label>Location Street Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_Venue__c</fullName>
        <label>Location Venue</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_Zip_Code__c</fullName>
        <inlineHelpText>Required if you want event to be located in geographic/zip searches.</inlineHelpText>
        <label>Location Zip Code (important)</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Longitude__c</fullName>
        <label>Longitude</label>
        <precision>18</precision>
        <scale>15</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Max_number_of_guests__c</fullName>
        <description>If more than 0, allow member to register guests.</description>
        <inlineHelpText>If more than 0, allow member to register guests.</inlineHelpText>
        <label>Max number of additional guests</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Num_Invited__c</fullName>
        <label>Num. Invited</label>
        <summaryFilterItems>
            <field>IAVAEvent_Attendee__c.Inviter_History__c</field>
            <operation>notEqual</operation>
            <value></value>
        </summaryFilterItems>
        <summaryForeignKey>IAVAEvent_Attendee__c.Event__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Num_Replies_Remaining__c</fullName>
        <description>Number of available reply spots if there is a reply cap. If no cap this field will be blank.</description>
        <formula>if(not(isnull(Reply_Cap__c)), Reply_Cap__c -  Num_Replies_Yes__c, value(&quot;&quot;))</formula>
        <inlineHelpText>Number of available reply spots if there is a reply cap. If no cap this field will be blank.</inlineHelpText>
        <label>Num. Replies Remaining</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Num_Replies_Total__c</fullName>
        <description>Number of replies of all statuses</description>
        <inlineHelpText>Number of replies of all statuses</inlineHelpText>
        <label>Num. Replies (Total)</label>
        <summaryFilterItems>
            <field>IAVAEvent_Attendee__c.Reply_Status__c</field>
            <operation>notEqual</operation>
            <value>Invited</value>
        </summaryFilterItems>
        <summaryForeignKey>IAVAEvent_Attendee__c.Event__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Num_Replies_Yes__c</fullName>
        <description>Number of Event Attendee replies with status &quot;Yes&quot;</description>
        <inlineHelpText>Number of Event Attendee replies with status &quot;Yes&quot;</inlineHelpText>
        <label>Num. Replies (Yes)</label>
        <summaryFilterItems>
            <field>IAVAEvent_Attendee__c.Reply_Status__c</field>
            <operation>equals</operation>
            <value>Yes</value>
        </summaryFilterItems>
        <summaryForeignKey>IAVAEvent_Attendee__c.Event__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_Attendees__c</fullName>
        <description>number of attendees pulls from the event attendees object</description>
        <inlineHelpText>number of attendees pulls from the event attendees object</inlineHelpText>
        <label>Number of Attendees</label>
        <summaryFilterItems>
            <field>IAVAEvent_Attendee__c.Attended__c</field>
            <operation>equals</operation>
            <value>Yes</value>
        </summaryFilterItems>
        <summaryForeignKey>IAVAEvent_Attendee__c.Event__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Organizer_Type__c</fullName>
        <label>Organizer Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Staff</fullName>
                </value>
                <value>
                    <fullName>Distributed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Origin__c</fullName>
        <label>Origin</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Staff</fullName>
                </value>
                <value>
                    <fullName>COV</fullName>
                </value>
                <value>
                    <fullName>External source</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Post_Event_Short_Summary__c</fullName>
        <inlineHelpText>limit 255 characters</inlineHelpText>
        <label>Post-Event Short Summary</label>
        <length>1500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PowerOfOne__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PowerOfOne</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <formula>IF(Location_State__c = &quot;AL&quot;,3,
IF(Location_State__c = &quot;AK&quot;,6,
IF(Location_State__c = &quot;AZ&quot;,5,
IF(Location_State__c = &quot;AR&quot;,4,
IF(Location_State__c = &quot;CA&quot;,7,
IF(Location_State__c = &quot;CO&quot;,6,
IF(Location_State__c = &quot;CT&quot;,1,
IF(Location_State__c = &quot;DC&quot;,2,
IF(Location_State__c = &quot;DE&quot;,2,
IF(Location_State__c = &quot;FL&quot;,3,
IF(Location_State__c = &quot;GA&quot;,3,
IF(Location_State__c = &quot;GU&quot;,6,
IF(Location_State__c = &quot;HI&quot;,6,
IF(Location_State__c = &quot;ID&quot;,6,
IF(Location_State__c = &quot;IL&quot;,4,
IF(Location_State__c = &quot;IN&quot;,1,
IF(Location_State__c = &quot;IA&quot;,6,
IF(Location_State__c = &quot;KS&quot;,6,
IF(Location_State__c = &quot;KY&quot;,2,
IF(Location_State__c = &quot;LA&quot;,4,
IF(Location_State__c = &quot;ME&quot;,1,
IF(Location_State__c = &quot;MD&quot;,2,
IF(Location_State__c = &quot;MA&quot;,1,
IF(Location_State__c = &quot;MI&quot;,1,
IF(Location_State__c = &quot;MN&quot;,6,
IF(Location_State__c = &quot;MS&quot;,4,
IF(Location_State__c = &quot;MO&quot;,4,
IF(Location_State__c = &quot;MT&quot;,6,
IF(Location_State__c = &quot;NE&quot;,6,
IF(Location_State__c = &quot;NV&quot;,6,
IF(Location_State__c = &quot;NH&quot;,1,
IF(Location_State__c = &quot;NJ&quot;,1,
IF(Location_State__c = &quot;NM&quot;,5,
IF(Location_State__c = &quot;NY&quot;,1, 
IF(Location_State__c = &quot;NC&quot;,4,
IF(Location_State__c = &quot;ND&quot;,6,
IF(Location_State__c = &quot;OH&quot;,1,
IF(Location_State__c = &quot;OK&quot;,5,
IF(Location_State__c = &quot;OR&quot;,7,
IF(Location_State__c = &quot;PA&quot;,1,
IF(Location_State__c = &quot;RI&quot;,1,
IF(Location_State__c = &quot;SC&quot;,3,
IF(Location_State__c = &quot;SD&quot;,6,
IF(Location_State__c = &quot;TN&quot;,4,
IF(Location_State__c = &quot;TX&quot;,5,
IF(Location_State__c = &quot;UT&quot;,6,
IF(Location_State__c = &quot;VT&quot;,1,
IF(Location_State__c = &quot;VA&quot;,2,
IF(Location_State__c = &quot;WA&quot;,7,
IF(Location_State__c = &quot;WV&quot;,2,
IF(Location_State__c = &quot;WI&quot;,6,
IF(Location_State__c = &quot;WY&quot;,6,
NULL))))))))))))))))))))))))))))))))))))))))))))))))))))</formula>
        <label>Region #</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reply_Cap__c</fullName>
        <description>Maximum number of &quot;Yes&quot; responses before Event becomes closed to more replies. If blank then no cap.</description>
        <inlineHelpText>Maximum number of &quot;Yes&quot; responses before Event becomes closed to more replies. If blank then no cap.</inlineHelpText>
        <label>Reply Cap</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Resend_Attendee_Survey__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check to resend attendee survey</inlineHelpText>
        <label>Resend Attendee Survey</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Social_Media_Published_Date_c__c</fullName>
        <description>Date when social media was posted</description>
        <inlineHelpText>Date when social media was posted</inlineHelpText>
        <label>Social_Media_Published_Date__c</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Social_Media_Status__c</fullName>
        <description>Status of social media post</description>
        <inlineHelpText>Status of social media post</inlineHelpText>
        <label>Social Media Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Do Not Post</fullName>
                </value>
                <value>
                    <fullName>Not Posted</fullName>
                </value>
                <value>
                    <fullName>Post Published</fullName>
                </value>
                <value>
                    <fullName>Post Requested</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Social_Promotion_Link_1__c</fullName>
        <description>URL for Facebook promotion</description>
        <inlineHelpText>URL for Facebook promotion</inlineHelpText>
        <label>Facebook Promotion Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Social_Promotion_Link_2__c</fullName>
        <description>URL for Twitter promotion</description>
        <inlineHelpText>URL for Twitter promotion</inlineHelpText>
        <label>Twitter Promotion Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Start_Time__c</fullName>
        <inlineHelpText>Format: 12:15 PM (use local time for the event)</inlineHelpText>
        <label>Start Time (local)</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Unpublished</fullName>
                </value>
                <value>
                    <fullName>Published</fullName>
                </value>
                <value>
                    <fullName>Canceled</fullName>
                </value>
                <value>
                    <fullName>Flagged/Removed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status_of_Follow_up_Email__c</fullName>
        <label>Status of Follow up Email</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sent</fullName>
                </value>
                <value>
                    <fullName>Not Sent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Suppress_Attendee_Notifications__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, don&apos;t send attendee notification emails when an event&apos;s details change</description>
        <inlineHelpText>If checked, don&apos;t send attendee notification emails when an event&apos;s details change</inlineHelpText>
        <label>Suppress Event Changed Notifications</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Thumbnail_image_URL__c</fullName>
        <description>When the user uploads a new photo to a published group, the URL of the thumbnail version is inserted here and takes precedence over any attached thumbnail images.</description>
        <inlineHelpText>When the user uploads a new photo to a published group, the URL of the thumbnail version is inserted here and takes precedence over any attached thumbnail images. For an external site use a secure HTTPS link to prevent a secure site certificate error.</inlineHelpText>
        <label>Thumbnail image URL (automatic) - HTTPS</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Tier__c</fullName>
        <inlineHelpText>1=IAVA mandated event (Press Conf/Testimony); 2=Creator is receptive to IAVA directives; 3=Creator is a reliable leader &amp; uses own devices; 4=Creator is using the VetTogether tool to promote their own event &amp; not interested in deeper engagement</inlineHelpText>
        <label>Tier</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Topics__c</fullName>
        <label>Topics</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Afghanistan</fullName>
                </value>
                <value>
                    <fullName>Alternative Therapy</fullName>
                </value>
                <value>
                    <fullName>Clay Hunt SAV Act</fullName>
                </value>
                <value>
                    <fullName>COV</fullName>
                </value>
                <value>
                    <fullName>Discrimination</fullName>
                </value>
                <value>
                    <fullName>DOD</fullName>
                </value>
                <value>
                    <fullName>Employment</fullName>
                </value>
                <value>
                    <fullName>Gala</fullName>
                </value>
                <value>
                    <fullName>GI Bill</fullName>
                </value>
                <value>
                    <fullName>Healthcare</fullName>
                </value>
                <value>
                    <fullName>Homelessness</fullName>
                </value>
                <value>
                    <fullName>Iraq</fullName>
                </value>
                <value>
                    <fullName>Iraqi Interpreters</fullName>
                </value>
                <value>
                    <fullName>Local Events</fullName>
                </value>
                <value>
                    <fullName>Love</fullName>
                </value>
                <value>
                    <fullName>Member Survey</fullName>
                </value>
                <value>
                    <fullName>Mental Health</fullName>
                </value>
                <value>
                    <fullName>Military COLA</fullName>
                </value>
                <value>
                    <fullName>Military Recruitment</fullName>
                </value>
                <value>
                    <fullName>Military Sexual Trauma</fullName>
                </value>
                <value>
                    <fullName>NGIB</fullName>
                </value>
                <value>
                    <fullName>NYC Veterans</fullName>
                </value>
                <value>
                    <fullName>Online Campaigns</fullName>
                </value>
                <value>
                    <fullName>Op-Ed</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Overextended Military</fullName>
                </value>
                <value>
                    <fullName>Partnerships</fullName>
                </value>
                <value>
                    <fullName>Politics</fullName>
                </value>
                <value>
                    <fullName>PTSD</fullName>
                </value>
                <value>
                    <fullName>Rally</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Twitter_Promotion_Language__c</fullName>
        <label>Twitter Promotion Language</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Advocacy</fullName>
                </value>
                <value>
                    <fullName>Awareness Action</fullName>
                </value>
                <value>
                    <fullName>Bar Gathering</fullName>
                </value>
                <value>
                    <fullName>Career Development</fullName>
                </value>
                <value>
                    <fullName>Concert</fullName>
                </value>
                <value>
                    <fullName>Cookout</fullName>
                </value>
                <value>
                    <fullName>DPAA Burial</fullName>
                </value>
                <value>
                    <fullName>Fundraiser</fullName>
                </value>
                <value>
                    <fullName>Internal IAVA Training</fullName>
                </value>
                <value>
                    <fullName>Movie Screening</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Outdoor Activity</fullName>
                </value>
                <value>
                    <fullName>Parade</fullName>
                </value>
                <value>
                    <fullName>Run</fullName>
                </value>
                <value>
                    <fullName>Seminar/Education</fullName>
                </value>
                <value>
                    <fullName>Service Project</fullName>
                </value>
                <value>
                    <fullName>Social</fullName>
                </value>
                <value>
                    <fullName>Sporting Event</fullName>
                </value>
                <value>
                    <fullName>Support</fullName>
                </value>
                <value>
                    <fullName>VetTogether</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VIPs_in_Attendance__c</fullName>
        <label>VIPs in Attendance</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Visible_To__c</fullName>
        <label>Visible To (not yet functional)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Everyone</fullName>
                </value>
                <value>
                    <fullName>Confirmed</fullName>
                </value>
                <value>
                    <fullName>Unconfirmed</fullName>
                </value>
                <value>
                    <fullName>Other Era</fullName>
                </value>
                <value>
                    <fullName>Family</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Were_pictures_taken__c</fullName>
        <label>Were pictures taken?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>isIAVAEndorsed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IAVA Endorsed Event</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>myIAVA_Event_Link__c</fullName>
        <formula>&quot;https://my.iava.org/&quot;&amp;Event_Relative_URL__c</formula>
        <label>myIAVA Event Link</label>
        <type>Text</type>
    </fields>
    <label>Event</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Event_Date__c</columns>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Start_Time__c</columns>
        <columns>End_Time__c</columns>
        <columns>Status__c</columns>
        <columns>Chatter_Group_Mirror__c</columns>
        <columns>Organizer_Type__c</columns>
        <columns>Origin__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>Location_Zip_Code__c</columns>
        <columns>Latitude__c</columns>
        <columns>Longitude__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_VetTogethers</fullName>
        <columns>Creator_Contact__c</columns>
        <columns>NAME</columns>
        <columns>Event_Date__c</columns>
        <columns>Tier__c</columns>
        <columns>Location_City__c</columns>
        <columns>Location_State__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>Num_Replies_Total__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Event_Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>1/1/2015</value>
        </filters>
        <filters>
            <field>Event_Date__c</field>
            <operation>lessOrEqual</operation>
            <value>12/31/2015</value>
        </filters>
        <label>All  VetTogethers</label>
    </listViews>
</CustomObject>